After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724548 - bookmarks: Bug fixes
bookmarks: Bug fixes
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2014-02-17 14:10 UTC by Bastien Nocera
Modified: 2014-02-18 11:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bookmarks: Fix GrlMediaType for images too (1.20 KB, patch)
2014-02-17 14:10 UTC, Bastien Nocera
committed Details | Review
bookmarks: Fix content-added signal for new items (1018 bytes, patch)
2014-02-17 14:10 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2014-02-17 14:10:36 UTC
This allows the items to show up again in Totem, and with thumbnails!
Comment 1 Bastien Nocera 2014-02-17 14:10:44 UTC
Created attachment 269403 [details] [review]
bookmarks: Fix GrlMediaType for images too
Comment 2 Bastien Nocera 2014-02-17 14:10:49 UTC
Created attachment 269404 [details] [review]
bookmarks: Fix content-added signal for new items

We want to tell the front-end about the newly added item, not that
we added the parent container.
Comment 3 Juan A. Suarez Romero 2014-02-18 11:56:02 UTC
Attachment 269403 [details] pushed as cc99187 - bookmarks: Fix GrlMediaType for images too
Attachment 269404 [details] pushed as 55f47f4 - bookmarks: Fix content-added signal for new items