bookmarks: Fix content-added signal for new items

We want to tell the front-end about the newly added item, not that
we added the parent container.

https://bugzilla.gnome.org/show_bug.cgi?id=724548